--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 nltk==3.9.1
-numpy==1.24.4
+numpy>=1.22,<2.0
 packaging==25.0
 pillow==11.3.0
 preshed==3.0.10
