--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 annotated-types==0.7.0
 anyio==3.7.1
 blis==1.3.0
@@ -29,7 +31,7 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 nltk==3.9.1
-numpy>=1.22,<2.0
+numpy==1.24.4
 packaging==25.0
 pillow==11.3.0
 preshed==3.0.10
@@ -58,8 +60,8 @@ sympy==1.14.0
 thinc==8.3.6
 threadpoolctl==3.6.0
 tokenizers==0.13.3
-torch==2.7.1
-torchvision==0.22.1
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
 tqdm==4.67.1
 transformers==4.25.1
 typer==0.16.0
