--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 nltk==3.9.1
-numpy==1.24.4
+numpy>=2.0.0,<3.0.0
 packaging==25.0
 pillow==11.3.0
 preshed==3.0.10
@@ -51,7 +51,7 @@ sentencepiece==0.2.0
 shellingham==1.5.4
 smart_open==7.3.0.post1
 sniffio==1.3.1
-spacy==3.8.7
+spacy>=3.8.0,<4.0.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.1
