--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ mpmath==1.3.0
 murmurhash==1.0.13
 networkx==3.4.2
 nltk==3.9.1
-numpy>=2.0.0,<3.0.0
+numpy>=1.24.0,<2.0.0
 packaging==25.0
 pillow==11.3.0
 preshed==3.0.10
@@ -44,7 +44,7 @@ regex==2024.11.6
 requests==2.32.4
 rich==14.0.0
 safetensors==0.5.3
-scikit-learn==1.3.2
+scikit-learn>=1.4.2
 scipy==1.15.3
 sentence-transformers==2.2.2
 sentencepiece==0.2.0
@@ -57,7 +57,7 @@ spacy-loggers==1.0.5
 srsly==2.5.1
 starlette==0.27.0
 sympy==1.14.0
-thinc==8.3.6
+thinc==8.1.0
 threadpoolctl==3.6.0
 tokenizers==0.13.3
 torch==2.2.2+cpu
