--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 setuptools>=65.0.0
 annotated-types==0.7.0
 anyio==3.7.1
-blis==1.3.0
+blis
 catalogue==2.0.10
 certifi==2025.7.9
 charset-normalizer==3.4.2
@@ -57,7 +57,7 @@ spacy-loggers==1.0.5
 srsly==2.5.1
 starlette==0.27.0
 sympy==1.14.0
-thinc==8.1.0
+thinc
 threadpoolctl==3.6.0
 tokenizers==0.13.3
 torch==2.2.2+cpu
